fix unreadable font

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -102,7 +102,6 @@ img {
     padding-bottom: 15px;
     font-size:16px;
     line-height:20px;
-    font-weight: 220;
 }
 
 .paper {
